...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnResetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_button_bg"
                android:text="@string/reset_password"
                android:textColor="@color/primary"
...
