...
        android:id="@+id/layoutUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="17dp"
            android:textStyle="bold" />

...
