...
                android:layout_below="@+id/Password"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtAddress"
                android:ems="10"
                android:inputType="textPostalAddress" />
...
