<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update"
            android:title="Update Info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_signout_circle"
            android:title="Logout" />
    </group>

</menu>
