...
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smartSystems.com.bloodBank.Activities.UpdateInfoActivity">

    <TextView
        android:id="@+id/tvNewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text= "@string/address"
        android:textSize="20sp" />

    <AutoCompleteTextView
        android:id="@+id/etNewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
